--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -49,9 +49,13 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=7.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823">
+      <HintPath>..\packages\CsvHelper.15.0.5\lib\net45\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="engine">
       <HintPath>..\..\_assets\engine\bin\$(Configuration)\engine.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -138,6 +142,15 @@
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard1.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Extensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -1739,6 +1752,18 @@
       <DependentUpon>ClickOnS3DB.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>c4970bec-83f4-43b2-b2ac-1fb45d17ae50</id>
+    </Compile>
+    <Compile Include="CloseWASWebSite.cs">
+      <BoundTo>323152ac-6db2-4221-9b95-81cb017cd285</BoundTo>
+      <DependentUpon>CloseWASWebSite.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>df2c529e-d7b2-4334-ad97-1144dbb8371c</id>
+    </Compile>
+    <Compile Include="CloseWASWebSite.UserCode.cs">
+      <BoundTo>323152ac-6db2-4221-9b95-81cb017cd285</BoundTo>
+      <DependentUpon>CloseWASWebSite.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>6e818004-cd2b-4373-b4fe-dcc71b20b495</id>
     </Compile>
     <Compile Include="CSPRepository.cs">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
@@ -3399,6 +3424,18 @@
       <DependentUpon>Validate_User_Unlocked.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="ValidatinTheDatSCV.cs">
+      <BoundTo>5adf6f8f-256b-4045-866a-8ecf8430312e</BoundTo>
+      <DependentUpon>ValidatinTheDatSCV.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>89f342ee-beb2-4059-adf3-cc41f2f2b963</id>
+    </Compile>
+    <Compile Include="ValidatinTheDatSCV.UserCode.cs">
+      <BoundTo>5adf6f8f-256b-4045-866a-8ecf8430312e</BoundTo>
+      <DependentUpon>ValidatinTheDatSCV.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>8a51ee17-b4ec-4568-b8a0-2d40aeecd52e</id>
+    </Compile>
     <Compile Include="VisitSchedulesPage\Click_Add_VisitSchedule.cs">
       <id>bba8563e-71e0-4bf9-ab0d-e1d58723907f</id>
       <BoundTo>eb8836e3-90ae-4c43-8406-e9c56429749a</BoundTo>
@@ -4185,9 +4222,9 @@
       <recordtableid>080df293-98c0-462b-9cc8-0c147cc3a979</recordtableid>
     </None>
     <None Include="ClickExportFolder.rxrec">
-      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>addfdd85-40b3-4d05-b3b6-ed9f611e1050</id>
       <recordtableid>a33a0850-a2d3-4443-ab02-ac3fd559b9ec</recordtableid>
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
     </None>
     <None Include="ClickNoButton.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
@@ -4198,6 +4235,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>9752212b-14aa-420b-975c-23ecb54e5111</id>
       <recordtableid>1b6f7a64-d117-4a0f-9d1a-c484fda8e2f7</recordtableid>
+    </None>
+    <None Include="CloseWASWebSite.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>323152ac-6db2-4221-9b95-81cb017cd285</id>
+      <recordtableid>e071ec2d-9465-4ba8-9332-e3bc97529ad7</recordtableid>
     </None>
     <None Include="CSPRepository.rximg">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
@@ -5079,6 +5121,11 @@
       <id>204d75d8-ea97-42fc-b7ca-acaf414f69eb</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>45d37677-722b-4892-8305-4eac172507db</recordtableid>
+    </None>
+    <None Include="ValidatinTheDatSCV.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>5adf6f8f-256b-4045-866a-8ecf8430312e</id>
+      <recordtableid>fe5e7eea-cac2-48d8-a015-66c734eb7ce5</recordtableid>
     </None>
     <None Include="VisitSchedulesPage\Click_Add_VisitSchedule.rxrec">
       <id>eb8836e3-90ae-4c43-8406-e9c56429749a</id>
