QC-79- Adding closing key sequences that help us to close excel-

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -1753,6 +1753,18 @@
       <UserCode>true</UserCode>
       <id>c4970bec-83f4-43b2-b2ac-1fb45d17ae50</id>
     </Compile>
+    <Compile Include="CloseExcel.cs">
+      <BoundTo>0b7ff067-6539-4110-b304-9291ace51b2f</BoundTo>
+      <DependentUpon>CloseExcel.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>a940ebdd-3f35-4a26-a421-a3f739493473</id>
+    </Compile>
+    <Compile Include="CloseExcel.UserCode.cs">
+      <BoundTo>0b7ff067-6539-4110-b304-9291ace51b2f</BoundTo>
+      <DependentUpon>CloseExcel.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>ce870d52-544e-4803-93ba-58f60fbe11e4</id>
+    </Compile>
     <Compile Include="CloseWASWebSite.cs">
       <BoundTo>323152ac-6db2-4221-9b95-81cb017cd285</BoundTo>
       <DependentUpon>CloseWASWebSite.rxrec</DependentUpon>
@@ -4235,6 +4247,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>9752212b-14aa-420b-975c-23ecb54e5111</id>
       <recordtableid>1b6f7a64-d117-4a0f-9d1a-c484fda8e2f7</recordtableid>
+    </None>
+    <None Include="CloseExcel.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>0b7ff067-6539-4110-b304-9291ace51b2f</id>
+      <recordtableid>c6c15d16-e90c-4a1e-a97a-49645a04b59f</recordtableid>
     </None>
     <None Include="CloseWASWebSite.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
