QC-79: Added study that should be used for S3 DB and created a new GWK API Call

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2854,6 +2854,18 @@
       <DependentUpon>View_Lastest_Report.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="S3WorkFlow.cs">
+      <BoundTo>0905d48e-0e3c-4bd7-96b2-d6ca3afaf603</BoundTo>
+      <DependentUpon>S3WorkFlow.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>1969b206-9ee5-4775-9e9a-3550caae4b95</id>
+    </Compile>
+    <Compile Include="S3WorkFlow.UserCode.cs">
+      <BoundTo>0905d48e-0e3c-4bd7-96b2-d6ca3afaf603</BoundTo>
+      <DependentUpon>S3WorkFlow.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>fe1b9d65-4966-4d4a-9360-fa1dc024c862</id>
+    </Compile>
     <Compile Include="StudiesPage\Click_Add_Study.cs">
       <id>b2a9c4de-daa4-49fa-be99-a68df1c8ba8f</id>
       <BoundTo>f211a17f-9981-4eec-9e4f-6dd3d3382cad</BoundTo>
@@ -4938,6 +4950,11 @@
       <id>480d9a60-ad4e-41ed-a1e4-d253bb05627c</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>3bf72023-04a6-405d-b102-33645e57f937</recordtableid>
+    </None>
+    <None Include="S3WorkFlow.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>0905d48e-0e3c-4bd7-96b2-d6ca3afaf603</id>
+      <recordtableid>905f74ae-8e48-4eb5-877d-78231d4eb473</recordtableid>
     </None>
     <None Include="StudiesPage\Click_Add_Study.rxrec">
       <id>f211a17f-9981-4eec-9e4f-6dd3d3382cad</id>
