QC-48- Added report PDF To API regression suite folder

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -5041,6 +5041,13 @@
       <id>c4d77aeb-1d90-4699-85b3-ca77c15a5d2b</id>
       <recordtableid>13e4a129-f95e-4991-9c6b-4c0f0ad3992f</recordtableid>
     </None>
+    <Content Include="TenantConnector.csv">
+      <Link>TenantConnector.csv</Link>
+      <BoundTo>e421d7ee-56d4-498a-bcd8-1c82a2c916a5</BoundTo>
+      <DependentUpon>CSP.rxtst</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>f2f603b4-03ef-42e7-96be-7cf288957a51</id>
+    </Content>
     <None Include="TestValidation.rxrec">
       <id>164d1751-d66a-405e-b556-a62fe85e58dc</id>
       <recordtableid>c4a66323-b1f1-4ef1-ab5c-5098d4926605</recordtableid>
