QC-83 - Refactored processor test cases, cleaned up folder structure

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -1513,6 +1513,18 @@
       <BoundTo>045e984f-af50-454a-b86f-0a6818991852</BoundTo>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="APIV2Modules\APIV2_Launch_AssessmentAttempt.cs">
+      <id>8cf32e18-e835-46b3-8c42-6e13219f467b</id>
+      <DependentUpon>APIV2_Launch_AssessmentAttempt.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <BoundTo>56997c1f-ae4d-4d35-8cc7-f8a5afed9153</BoundTo>
+    </Compile>
+    <Compile Include="APIV2Modules\APIV2_Launch_AssessmentAttempt.UserCode.cs">
+      <id>091d62b5-15c6-4b8e-8feb-7bfcbc44988c</id>
+      <DependentUpon>APIV2_Launch_AssessmentAttempt.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <BoundTo>56997c1f-ae4d-4d35-8cc7-f8a5afed9153</BoundTo>
+    </Compile>
     <Compile Include="APIV2Modules\APIV2_ParticipantQualification_Status.cs">
       <DependentUpon>APIV2_ParticipantQualification_Status.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -1648,14 +1660,14 @@
       <UserCode>true</UserCode>
       <id>f8955114-cf3b-4bdf-8733-7e8dbae6b7e3</id>
     </Compile>
-    <Compile Include="APIV2Modules\InnalidMethode.cs">
-      <DependentUpon>InnalidMethode.rxrec</DependentUpon>
+    <Compile Include="APIV2Modules\InvalidMethod.cs">
+      <DependentUpon>InvalidMethod.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>7eb4c392-a5bf-4a73-8bbb-113413fcb4ca</id>
       <BoundTo>b51d96e8-3fc0-4136-a62a-3620e59a2840</BoundTo>
     </Compile>
-    <Compile Include="APIV2Modules\InnalidMethode.UserCode.cs">
-      <DependentUpon>InnalidMethode.rxrec</DependentUpon>
+    <Compile Include="APIV2Modules\InvalidMethod.UserCode.cs">
+      <DependentUpon>InvalidMethod.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>067a9c7d-67d9-4e98-a963-21c020663081</id>
       <BoundTo>b51d96e8-3fc0-4136-a62a-3620e59a2840</BoundTo>
@@ -1683,6 +1695,18 @@
       <UserCode>true</UserCode>
       <id>0284bd79-ee29-4908-a3c2-8f69fbc45277</id>
       <BoundTo>31bc1612-60fe-40d6-a7a8-aad42bd9ad32</BoundTo>
+    </Compile>
+    <Compile Include="APIV2Modules\Run_WorkflowInstance.cs">
+      <BoundTo>60bbc269-9dbb-420d-8bae-f4c0f1353028</BoundTo>
+      <DependentUpon>Run_WorkflowInstance.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>2b74e8e7-c909-4049-bf7f-59e772f88d2f</id>
+    </Compile>
+    <Compile Include="APIV2Modules\Run_WorkflowInstance.UserCode.cs">
+      <BoundTo>60bbc269-9dbb-420d-8bae-f4c0f1353028</BoundTo>
+      <DependentUpon>Run_WorkflowInstance.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>7c020eeb-f0c7-48e6-adb2-64043469ab51</id>
     </Compile>
     <Compile Include="APIV2Modules\Validate_CBB_Version.cs">
       <DependentUpon>Validate_CBB_Version.rxrec</DependentUpon>
@@ -2105,18 +2129,6 @@
       <id>de5be219-cf2c-4b83-99f9-2f4a456fa361</id>
       <BoundTo>b4ef8c6c-5296-4e87-8ccf-a6a445de4dee</BoundTo>
       <DependentUpon>Generate_Secret.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-    </Compile>
-    <Compile Include="General\Launch_AssessmentAttempt.cs">
-      <id>8cf32e18-e835-46b3-8c42-6e13219f467b</id>
-      <DependentUpon>Launch_AssessmentAttempt.rxrec</DependentUpon>
-      <BoundTo>56997c1f-ae4d-4d35-8cc7-f8a5afed9153</BoundTo>
-      <RecorderCode>true</RecorderCode>
-    </Compile>
-    <Compile Include="General\Launch_AssessmentAttempt.UserCode.cs">
-      <id>091d62b5-15c6-4b8e-8feb-7bfcbc44988c</id>
-      <DependentUpon>Launch_AssessmentAttempt.rxrec</DependentUpon>
-      <BoundTo>56997c1f-ae4d-4d35-8cc7-f8a5afed9153</BoundTo>
       <UserCode>true</UserCode>
     </Compile>
     <Compile Include="General\Login_Gmail.cs">
@@ -3550,14 +3562,14 @@
       <DependentUpon>Select_VisitSchedule.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
-    <Compile Include="WorkFlowInstance.cs">
-      <DependentUpon>WorkFlowInstance.rxrec</DependentUpon>
+    <Compile Include="Generate_WorkflowInstance.cs">
+      <DependentUpon>Generate_WorkflowInstance.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>7fe62842-5e84-419c-97bd-1b5fe2517657</id>
       <BoundTo>de77e08a-a1f1-46ac-8971-cdd7dbe62062</BoundTo>
     </Compile>
-    <Compile Include="WorkFlowInstance.UserCode.cs">
-      <DependentUpon>WorkFlowInstance.rxrec</DependentUpon>
+    <Compile Include="Generate_WorkflowInstance.UserCode.cs">
+      <DependentUpon>Generate_WorkflowInstance.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>81de7b5e-e55f-4acd-899a-d37e786814b4</id>
       <BoundTo>de77e08a-a1f1-46ac-8971-cdd7dbe62062</BoundTo>
@@ -4168,6 +4180,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>03a98aac-9699-4331-a3fa-00536dfad33f</recordtableid>
     </None>
+    <None Include="APIV2Modules\APIV2_Launch_AssessmentAttempt.rxrec">
+      <id>56997c1f-ae4d-4d35-8cc7-f8a5afed9153</id>
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <recordtableid>4cf38574-50a6-4296-8017-6f3285aac388</recordtableid>
+    </None>
     <None Include="APIV2Modules\APIV2_ParticipantQualification_Status.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>c04f5934-5eae-403b-af9f-91516f223f3a</id>
@@ -4223,7 +4240,7 @@
       <id>915a7715-2246-45d7-9b83-536fcaf59f17</id>
       <recordtableid>b5c1f78b-d628-4e9c-83b0-597bcacc9905</recordtableid>
     </None>
-    <None Include="APIV2Modules\InnalidMethode.rxrec">
+    <None Include="APIV2Modules\InvalidMethod.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>b51d96e8-3fc0-4136-a62a-3620e59a2840</id>
       <recordtableid>8f0a81f9-8c93-4991-a51a-72922622081c</recordtableid>
@@ -4237,6 +4254,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>31bc1612-60fe-40d6-a7a8-aad42bd9ad32</id>
       <recordtableid>957128ba-5359-452d-b0db-ee9e12c48683</recordtableid>
+    </None>
+    <None Include="APIV2Modules\Run_WorkflowInstance.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>60bbc269-9dbb-420d-8bae-f4c0f1353028</id>
+      <recordtableid>62a7ba5a-056d-4bd2-878a-716d185011cb</recordtableid>
     </None>
     <None Include="APIV2Modules\Validate_CBB_Version.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
@@ -4517,11 +4539,6 @@
       <id>b4ef8c6c-5296-4e87-8ccf-a6a445de4dee</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>69cc12f0-25dd-4495-a0bc-9eef9bdec8bb</recordtableid>
-    </None>
-    <None Include="General\Launch_AssessmentAttempt.rxrec">
-      <id>56997c1f-ae4d-4d35-8cc7-f8a5afed9153</id>
-      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
-      <recordtableid>4cf38574-50a6-4296-8017-6f3285aac388</recordtableid>
     </None>
     <None Include="General\Login_Gmail.rxrec">
       <id>22794ef1-7155-450a-8794-eb04f51e7937</id>
@@ -5207,7 +5224,7 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>884bab92-73c9-4c72-bcb0-b60b57cf56ef</recordtableid>
     </None>
-    <None Include="WorkFlowInstance.rxrec">
+    <None Include="Generate_WorkflowInstance.rxrec">
       <id>de77e08a-a1f1-46ac-8971-cdd7dbe62062</id>
       <recordtableid>9a2b9fff-5819-4334-8d9a-6b84b58d99f8</recordtableid>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
