QC-88- Added GETNEXTSTATE API CALL

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2359,6 +2359,18 @@
       <UserCode>true</UserCode>
       <id>22013a69-1911-4577-94c2-d7dbbd0f5162</id>
     </Compile>
+    <Compile Include="GetNext_State.cs">
+      <BoundTo>db58994e-0819-422a-a616-9b6d30c3396b</BoundTo>
+      <DependentUpon>GetNext_State.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>5c440a8d-6201-48ef-861c-fc91e88e4a18</id>
+    </Compile>
+    <Compile Include="GetNext_State.UserCode.cs">
+      <BoundTo>db58994e-0819-422a-a616-9b6d30c3396b</BoundTo>
+      <DependentUpon>GetNext_State.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>0ce3b888-382c-49d3-a06c-c79d015d5b66</id>
+    </Compile>
     <Compile Include="InternalAPIModules\AuthenticateAsInternalUser.cs">
       <DependentUpon>AuthenticateAsInternalUser.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -4646,6 +4658,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>946e90e3-3692-43f2-b12d-5aa24e3bf6a8</id>
       <recordtableid>532f08c6-9cad-477b-91cb-8ffa5f4e7cbb</recordtableid>
+    </None>
+    <None Include="GetNext_State.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>db58994e-0819-422a-a616-9b6d30c3396b</id>
+      <recordtableid>e3c111c2-88d1-4da6-adf4-d67326f94bd2</recordtableid>
     </None>
     <None Include="images\RJ.png">
       <id>6d9e5abf-4447-4cfc-8ad3-859562e71728</id>
