QC-83 - Added Pass/Fail scenarios for individual Det, Idn, OCL tests to processor project

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -4441,6 +4441,18 @@
       <id>806995ce-4ea8-46ed-89ba-57e6793bde29</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\Detection.csv">
+      <id>6020dee4-b63c-42a6-bb53-b482ee432dd6</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\DetectionFF.csv">
+      <id>834df860-71e0-4fe3-b923-c8f7a9cde4be</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\DetectionPF.csv">
+      <id>ce3f5aa4-f617-4835-9a31-d59fe9cb20ef</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\extract1.csv">
       <id>9d814ac2-d49a-46d1-8534-3e3fba54fad0</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4465,6 +4477,18 @@
       <id>0c0f25f3-e782-4705-a4ff-9d9c4f868174</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\Identification.csv">
+      <id>3ceaca6c-faa0-4f98-af9d-df0505e359e1</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\IdentificationFF.csv">
+      <id>75a3ac61-eaf1-41c0-aa62-d7d6f0dd3906</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\IdentificationPF.csv">
+      <id>b1d56594-86a9-4f4d-912e-194d0b3cab03</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\IDSST.csv">
       <id>2cd6bf7f-3bb4-47d9-a37d-ec5bd739ae7c</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4475,6 +4499,18 @@
     </None>
     <None Include="csv\Manual Calculations Pant.xlsm">
       <id>cab83a20-0fe3-48dd-8fef-529b14d8c2fd</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\OCL.csv">
+      <id>2ebd8648-9bca-4ce9-a7d2-31166782c3c6</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\OCLFF.csv">
+      <id>350cad16-2a80-4b70-8d5c-4fedfe9afbda</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\OCLPF.csv">
+      <id>385a72e4-4c6d-4863-8108-549f03d2201c</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="csv\PRD1752.csv">
@@ -4909,6 +4945,18 @@
       <id>992bcace-279e-49b1-ae1f-0ba350a72c85</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="rawData\Detection.txt">
+      <id>a9f025e5-af71-46a2-9b3c-289e3bbbb2d8</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\DetectionFF.txt">
+      <id>38421bc5-8b13-44ba-a592-eaa18f1de445</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\DetectionPF.txt">
+      <id>6cd4c1bd-e767-4d1d-a1dd-efba933547e5</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="rawData\FName.txt">
       <id>6d91b5a5-eaa2-4561-94e1-d84561df5966</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4925,12 +4973,36 @@
       <id>97738831-b76d-49dc-83ed-755955dcb516</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="rawData\Identification.txt">
+      <id>233fb00c-77fc-488d-a01f-93a033257462</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\IdentificationFF.txt">
+      <id>ddb29fb6-37d8-4a01-b8db-825b76f415e1</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\IdentificationPF.txt">
+      <id>4d87c30c-f869-45f9-a395-423b9f7a5aa5</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="rawData\IDSST.txt">
       <id>7b82a309-00ae-4b63-8717-98e3872cd9ae</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\ISLT.txt">
       <id>0be16bd1-7b47-4a27-ad52-4f0a9d6c732a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OCL.txt">
+      <id>c547919c-5db1-4897-8944-734905c49eb2</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OCLFF.txt">
+      <id>35ba023c-14db-4cb4-ad77-8b69c331217e</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\OCLPF.txt">
+      <id>abb77db1-0f89-4098-ba9d-0af5fe3f050c</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\PartialCBB.txt">
